--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -655,3 +655,14 @@ month={June},}
 	title        = {List of supported Operative Systems and Architectures on Go},
 	howpublished = {\url{https://golang.org/doc/install/source#environment}}
 }
+
+@misc{dissis_def,
+	title        = {Introduction to  Distributed Systems (DS)},
+	howpublished = {\url{https://www.uio.no/studier/emner/matnat/ifi/INF5040/h15/lecture-notes/2015-08-24-introtods.pdf}}
+}
+
+
+@misc{dht_image,
+	title        = {Pseudo-DHT. Distributed Search Algorithm for P2P Video Streaming},
+	howpublished = {\url{https://slideplayer.com/slide/13341399/}}
+}
