--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -1,7 +1,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-{\large\bfseries Title  \\ Subtitle }\\
+{\large\bfseries Godea. Go Decentralized Evolutionary Algorithm  \\ Collaborative science library to running evolutionary algorithms on ephemeral infrastructure }\\
 \end{center}
 \begin{center}
 Salvador Corts Sánchez\\
@@ -10,7 +10,7 @@ Salvador Corts Sánchez\\
 %\vspace{0.7cm}
 
 \vspace{0.5cm}
-\noindent{\textbf{Keywords}: \textit{Open Source}
+\noindent{\textbf{Keywords}: \textit{Open Source, Golang, Peer-to-Peer, Distributed systems, Machine Learning, Evolutionary Algorithms}
 \vspace{0.7cm}
 
 \noindent{\textbf{Abstract}\\
@@ -19,13 +19,13 @@ Salvador Corts Sánchez\\
 \cleardoublepage
 
 \begin{center}
-	{\large\bfseries Título y Subtitulo}\\
+	{\large\bfseries Godea. Go Decentralized Evolutionary Algorithm \\ Librería para ejecutar algoritmos evolutivos sobre infraestructura efímera basada en un sistema de ciencia colaborativa}\\
 \end{center}
 \begin{center}
 	Salvador Corts Sánchez\\
 \end{center}
 \vspace{0.5cm}
-\noindent{\textbf{Palabras Clave}: \textit{Software Libre}, \textit{floss}
+\noindent{\textbf{Palabras Clave}: \textit{Software Libre, Golang, Peer-2-Peer, Sistemas distribuidos, Aprendizaje Automático, Algoritmos Evolutivos}
 \vspace{0.7cm}
 
 \noindent{\textbf{Resumen}\\
