--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -10,16 +10,16 @@ Evolutionary algorithms are a successful approach to solve many difficult proble
 
 Today we have an incredible amount of resources available for computation, most of them are wasted being partially idle all the time. What about using these potential resources to help science by running evolutionary algorithms in a distributed way?
 
-This project aims to take advantage of this opportunity by providing a common platform to deploy distributed evolutionary algorithms and enabling both tech-savvy and non-tech-savvy people to contribute to solving problems with their machines.
+This project aims to take advantage of this opportunity by providing a tool to deploy distributed evolutionary algorithms and enabling both tech-savvy and non-tech-savvy people to contribute to solving problems with their machines.
 
 We cannot control how the users of the platform will behave in terms of how much time will they invest collaborating in our platform, therefore, we need our system to scale well with an ephemeral and heterogeneous environment where nodes can disappear without previous notice and can have an important performance difference between each other, or even being implemented in different languages. 
 
 
 \section{Objectives}
-The overall objective of this project is to provide a common platform where researchers and contributors run Evolutionary Algorithms in a distributed way while minimizing the effort they need to make in order to do so. We can break it down in the following objectives:
+The overall objective of this project is to provide a tool for researchers and contributors to run Evolutionary Algorithms in a distributed way while minimizing the effort they need to make in order to do so. We can break it down in the following objectives:
 
 \begin{itemize}
-    \item Maximize engagement of the browser-based contributor user.
+    \item Maximize engagement of the contributor user.
     
     \item Provide a fault-tolerant design capable of working with heterogeneous and ephemeral nodes.
     
