--- a/doc/portada/portada.tex
+++ b/doc/portada/portada.tex
@@ -12,9 +12,9 @@
 \textsc{ \Large TRABAJO FIN DE GRADO\\[0.2cm]}
 \textsc{ GRADO EN INGENIERIA INFORMATICA}\\[1cm]
 
-{\Huge\bfseries Título \\}
+{\Huge\bfseries Godea. Go Decentralized Evolutionary Algorithm  \\}
 \noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
-{\large\bfseries Subtítulo }
+{\large\bfseries Collaborative science Go library to running evolutionary algorithms on ephemeral infrastructure}
 \end{minipage}
 
 \vspace{2.5cm}
